# splicevo

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
configs/: data.json  data_helix.json  data_helix_human_mouse.json  data_helix_human_mouse_rat.json  data_human_mouse.json  data_human_mouse_rat.json  data_human_mouse_small.json  data_mouse_rat.json  data_rat.json  data_rat_small.json  genomes.json  genomes_adult.json  genomes_adult_helix.json  genomes_helix.json  genomes_helix_adult.json  genomes_helix_small.json  genomes_middle.json  genomes_middle_helix.json  genomes_small.json  training_default.yaml  training_full.yaml  training_resnet.yaml  training_softmax_pool.yaml  training_softmax_pool_small.yaml  training_subset.yaml  training_transformer.yaml  training_transformer_fast.yaml  training_transformer_small.yaml  training_updated.yaml
docs/: flexible_contributions_api.md  index.md  installation.md  model_architecture_diagram.md  plotting_attributions.md  softmax_pooling.md  tfmodisco_motif_length.md  usage.md
examples/: data_timed.py
notebooks/: data.ipynb  model_evaluation.ipynb  model_evaluation_new.ipynb  model_simulate.ipynb  modell_simulate.ipynb  modisco_analysis_example.ipynb  test_attributions.ipynb  test_sparse_pipeline.ipynb
scripts/: README.md  SoftmaxPool.py  create_condition_mask.py  data_load.py  data_load_submit.sh  data_load_submit_10.sh  data_load_submit_small.sh  data_split.py  data_split_borzoi.py  data_split_borzoi_submit.sh  data_split_submit.sh  data_split_submit_10.sh  data_split_submit_small.sh  diagnose_split.py  epoch_train.out  epoch_train.py  plot_diagnostics.py  process_data.py  run_modisco.py  run_modisco_submit.sh  splicevo_attributions.py  splicevo_attributions.sh  splicevo_attributions_merge_batches.py  splicevo_attributions_submit.sh  splicevo_evaluate.py  splicevo_evaluate_submit.sh  splicevo_predict.py  splicevo_predict_submit.sh  splicevo_predict_submit_small.sh  splicevo_train.py  splicevo_train_submit.sh  splicevo_train_submit_small.sh  submit_pipeline.sh  test_softmax_pool.py
src/splicevo/: __init__.py  cli.py
src/splicevo/attributions/: __init__.py  attributions.py  compute.py  modisco_analysis.py  plot.py
src/splicevo/data/: README.md  __init__.py  data_loader.py  data_splitter.py
src/splicevo/io/: gene_annotation.py  genome.py  splice_sites.py  utils.py
src/splicevo/model/: .gitignore  README.md  __init__.py  data_flow_diagram.md  model.py  splicevo.py
src/splicevo/training/: __init__.py  dataset.py  losses.py  normalization.py  samplers.py  trainer.py
src/splicevo/utils/: __init__.py  analysis_utils.py  data_utils.py  model_utils.py  plotting_utils.py  sequence_utils.py  warnings.py  window_utils.py
tests/: __init__.py  test_attention.py  test_condition_expansion.py  test_condition_masking.py  test_data_loader.py  test_memory_optimizations.py  test_positions_parameter.py  test_splicevo.py  test_streaming_dataset.py  test_streaming_training.py
