# Build system requirements for PEP 517/518 compliance
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splicevo"
version = "0.1.0"
description = "DL model for splicing across evolution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

authors = [
  {name = "Anamaria Elek", email = "a.elek@zmbh.uni-heidelberg.de"}
]
maintainers = [
  {name = "Anamaria Elek", email = "a.elek@zmbh.uni-heidelberg.de"}
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: OS Independent"
]

dependencies = [
  "typer>=0.9,<1.0.0",
  "torch>=2.0.0,<3.0.0",
  "numpy>=1.23,<2.0",
  "pandas>=1.5,<3.0",
  "pyfaidx>=0.7.2,<1.0.0",
  "tangermeme==0.5.1",
  "grelu==1.0.9",
  "setuptools<81",  # Pin setuptools to avoid pkg_resources deprecation warnings
  "tensorboard>=2.14.0,<3.0.0",
  "tqdm>=4.65.0,<5.0.0",
]

[project.optional-dependencies]
test = [
  "coverage>=7.0.0,<8.0.0",
  "pytest>=7.0.0,<9.0.0",
  "ruff>=0.1.0,<0.5.0",
  "mypy>=1.0.0,<2.0.0",
  "ipdb>=0.13.0,<0.14.0"
]

[project.urls]
homepage = "https://github.com/anamariaelek/splicevo"
bugs = "https://github.com/anamariaelek/splicevo/issues"
changelog = "https://github.com/anamariaelek/splicevo/blob/master/HISTORY.md"

[project.scripts]
splicevo = "splicevo.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.mypy]
# Basic mypy configuration
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# Add overrides here if you want to selectively ignore files or relax rules
# Example:
# module = "tests.*"
# disallow_untyped_defs = false

